# ContiBancari

./: .gitignore  CMakeLists.txt  README.md  conti_salvati.txt  estratto_conto.txt  main.cpp
.github/workflows/: cpp-tests.yml
Test/: CMakeLists.txt  Conti.h  test_conti.cpp
